--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,50 @@
-.Navbar {
-  padding: 1rem;
-  background-color: gainsboro;
+
+html { 
+  background: url(images/vendingMachine.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.Navbar a {
-  font-size: 1.5rem;
-  margin: 1rem;
-  color: darkcyan;
+body {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: rgba(51, 51, 51, 0.7);
 }
 
-.Navbar a:hover {
-  color: white;
+h1 {
+  color: rgba(250, 235, 215);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+}
+
+.home{
+
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgba(250, 235, 215, 0.884);
+  text-decoration: none;
+  font-size: 1rem;;
+  color: black;
+  border-radius: 5px;
+  transition:  all .5s ease;
+}
+
+
+.home:hover {
+  background-color: rgba(250, 235, 215);
+  -webkit-box-shadow: inset 1px 1px 10px #333;
+  -moz-box-shadow:    inset 1px 1px 10px #333;
+  box-shadow:         inset 1px 1px 10px #333;
+  transition:  all .5s ease;
 }
